non random sampling

--- a/src/sparse.ipynb
+++ b/src/sparse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,18 +17,18 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "train_path = \"../train.csv\"\n",
-    "n_factors = 100\n",
-    "learning_rate = 0.001\n",
-    "wd = 0.0005\n",
-    "batch_size = 32\n",
-    "n_epochs = 50\n",
+    "n_factors = 64\n",
+    "learning_rate = 0.0005\n",
+    "wd =  0.0005\n",
+    "batch_size = 128\n",
+    "n_epochs = 8\n",
     "use_BPR = True\n",
-    "n_ng = 1"
+    "n_ng = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,26 +45,35 @@
     "        self.n_items = n_items\n",
     "        self.n_ng = n_ng\n",
     "        self.is_training = is_training\n",
+    "        self.ratings_with_ng = []\n",
+    "        if self.is_training:\n",
+    "            self.get_ng()\n",
+    "            \n",
     "            \n",
     "    def __len__(self):\n",
-    "        return len(self.ratings_list)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        rating = self.ratings_list[idx]\n",
-    "        \n",
     "        if self.is_training:\n",
-    "            user, pos_item = rating\n",
-    "            neg_item = np.random.randint(self.n_items)\n",
-    "            while (user, neg_item) in self.ratings_set:\n",
+    "            return len(self.ratings_with_ng)\n",
+    "        else:\n",
+    "            return len(self.ratings_list)\n",
+    "    \n",
+    "    def get_ng(self):\n",
+    "        for user, pos_item in self.ratings_list:\n",
+    "            for _ in range(n_ng):\n",
     "                neg_item = np.random.randint(self.n_items)\n",
-    "            return user, pos_item, neg_item\n",
+    "                while (user, neg_item) in self.ratings_set:\n",
+    "                    neg_item = np.random.randint(self.n_items)\n",
+    "                self.ratings_with_ng.append((user, pos_item, neg_item))\n",
     "        \n",
-    "        return rating"
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        if self.is_training:\n",
+    "            return self.ratings_with_ng[idx]\n",
+    "        return self.ratings_list[idx]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,17 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "247261\n",
-      "61816\n",
-      "247261\n",
-      "61816\n"
+      "278169\n",
+      "30908\n",
+      "4450704\n",
+      "30908\n"
      ]
     }
    ],
@@ -142,18 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7321280149854563b7019b9481f7b13a",
+       "model_id": "07abf1933f894b31aacafc08fe60ec00",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='0 / 50: 1', max=50.0, style=ProgressStyle(description_wid…"
+       "HBox(children=(FloatProgress(value=0.0, description='0 / 8: 1', max=8.0, style=ProgressStyle(description_width…"
       ]
      },
      "metadata": {},
@@ -163,57 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "val loss: 1.4809\n",
-      "val loss: 1.1422\n",
-      "val loss: 0.8903\n",
-      "val loss: 0.6545\n",
-      "val loss: 0.4422\n",
-      "val loss: 0.3577\n",
-      "val loss: 0.3380\n",
-      "val loss: 0.3170\n",
-      "val loss: 0.2880\n",
-      "val loss: 0.2935\n",
-      "val loss: 0.2890\n",
-      "val loss: 0.2797\n",
-      "val loss: 0.2757\n",
-      "val loss: 0.2770\n",
-      "val loss: 0.2566\n",
-      "val loss: 0.2649\n",
-      "val loss: 0.2648\n",
-      "val loss: 0.2544\n",
-      "val loss: 0.2663\n",
-      "val loss: 0.2574\n",
-      "val loss: 0.2671\n",
-      "val loss: 0.2601\n",
-      "val loss: 0.2500\n",
-      "val loss: 0.2545\n",
-      "val loss: 0.2505\n",
-      "val loss: 0.2571\n",
-      "val loss: 0.2503\n",
-      "val loss: 0.2557\n",
-      "val loss: 0.2565\n",
-      "val loss: 0.2570\n",
-      "val loss: 0.2502\n",
-      "val loss: 0.2565\n",
-      "val loss: 0.2558\n",
-      "val loss: 0.2650\n",
-      "val loss: 0.2450\n",
-      "val loss: 0.2632\n",
-      "val loss: 0.2611\n",
-      "val loss: 0.2642\n",
-      "val loss: 0.2557\n",
-      "val loss: 0.2479\n",
-      "val loss: 0.2629\n",
-      "val loss: 0.2659\n",
-      "val loss: 0.2601\n",
-      "val loss: 0.2561\n",
-      "val loss: 0.2596\n",
-      "val loss: 0.2490\n",
-      "val loss: 0.2562\n",
-      "val loss: 0.2475\n",
-      "val loss: 0.2621\n",
-      "val loss: 0.2554\n",
-      "\n"
+      "val loss: 0.7965\n"
      ]
     }
    ],
@@ -235,6 +194,8 @@
     "    if not use_BPR:\n",
     "        for batch_num, batch in enumerate(train_loader):\n",
     "            user, pos_item, neg_item = batch\n",
+    "            \n",
+    "            \n",
     "            pos_label = torch.ones(pos_item.shape)\n",
     "            neg_label = torch.zeros(neg_item.shape)\n",
     "\n",
@@ -288,39 +249,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.2450128898161479\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f99f3c683c7451ca533a7ce8e56f065",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=4454.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[2940, 968, 457, 2536, 3026, 706, 2031, 333, 465, 1505, 3229, 2547, 1923, 1949, 496, 167, 307, 331, 2622, 3142, 2299, 2455, 2339, 2549, 2022, 663, 1194, 2312, 1575, 3037, 3178, 1860, 845, 2127, 1673, 1193, 2464, 1835, 3158, 898, 2757, 2108, 863, 2144, 2034, 117, 2841, 639, 1857, 702]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(best_loss)\n",
     "model.load_state_dict(torch.load(\"model-{}.pt\".format(n_factors)))\n",
@@ -341,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
